--- a/moments.html
+++ b/moments.html
@@ -50,7 +50,7 @@
       color: white;
       text-align: center;
       opacity: 0;
-      transition: opacity 0.3s ease, text-shadow 0.3s ease;
+      /* transition: opacity 0.3s ease, text-shadow 0.3s ease; */
       border-bottom-left-radius: 6px;
       border-bottom-right-radius: 6px;
       text-shadow: none;
@@ -142,6 +142,11 @@
       <div class="image-container"><img src="photo19.jpeg"><div class="caption">Yhona: pls snap me 🙏</div></div>
       <div class="image-container"><img src="photo22.jpeg"><div class="caption">hi</div></div>
       <div class="image-container"><img src="photo23.jpeg"><div class="caption">best night in a long time</div></div>
+      <div class="image-container"><img src="photo28.JPG"><div class="caption">#cheekysnap</div></div>
+      <div class="image-container"><img src="photo29.JPG"><div class="caption">whats going on there??</div></div>
+      <div class="image-container"><img src="photo30.JPG"><div class="caption">heheh remember that - rookie mistake</div></div>
+      <div class="image-container"><img src="photo31.JPG"><div class="caption">i dont even know bro</div></div>
+      
     </div>
 
     <div class="column">
@@ -157,13 +162,17 @@
       <div class="image-container"><img src="photo20.JPG"><div class="caption">hey</div></div>
       <div class="image-container"><img src="photo21.jpeg"><div class="caption">hmmmm yummmy😋</div></div>
       <div class="image-container"><img src="photo24.jpeg"><div class="caption">hellowww</div></div>
-    </div>
+      <div class="image-container"><img src="photo25.JPG"><div class="caption">those jewish events are a good excuse to see you during the week</div></div>
+      <div class="image-container"><img src="photo26.JPG"><div class="caption">Bazookaaa</div></div>
+      <div class="image-container"><img src="photo27.JPG"><div class="caption">idk ive run out of ideas for captions</div></div>
+      <div class="image-container"><img src="photo33.JPG"><div class="caption">no need for a caption ^</div></div>
+    <div class="image-container"><img src="photo32.JPG"><div class="caption">maddys pasta was very yummmy😋</div></div>
   </div>
 </div>
 
 <script>
   const correctUsername = "lily";
-  const correctPassword = "shlonktimeisprecious";
+  const correctPassword = "l";
 
   function checkLogin() {
     const user = document.getElementById("username").value;
