--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       margin: 0;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4, #fbc2eb, #a6c1ee);
+      background: linear-gradient(270deg, #ff9a9e, #fad0c4, #fbc2eb, #a6c1ee, #ff9a9e);
       background-size: 400% 400%;
       animation: gradientShift 15s ease infinite;
       font-family: 'Poppins', sans-serif;
@@ -67,21 +67,12 @@
       justify-content: center;
       height: 100%;
       text-align: center;
-    }
-
-    .btn {
-      background-color: rgba(255, 255, 255, 0.15);
-      color: #ffffff;
-      border: 2px solid rgba(255, 255, 255, 0.3);
-      padding: 20px 50px;
-      margin: 10px;
-      border-radius: 20px;
-      font-size: 1.2rem;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      backdrop-filter: blur(5px);
-      text-decoration: none;
-      display: inline-block;
+        display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;          
+  text-align: center;
     }
 
    button {
@@ -100,12 +91,33 @@
       transform: scale(1.05);
     }
 
-    .btn a {
-      color: white;
-      text-decoration: none;
-      display: block;
-      width: 350px;
-    }
+    .btn {
+  background-color: rgba(255, 255, 255, 0.15);
+  color: #ffffff;
+  border: 2px solid rgba(255, 255, 255, 0.3);
+  padding: 20px 50px;
+  margin: 10px auto; /* center horizontally with auto */
+  border-radius: 20px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  backdrop-filter: blur(5px);
+  text-decoration: none;
+  display: flex;           /* flex container */
+  justify-content: center; /* center text horizontally */
+  align-items: center;     /* center text vertically */
+  width: fit-content;      /* shrink to fit content */
+}
+
+/* remove fixed width on anchor inside btn */
+.btn a {
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  width: auto;  /* let it size naturally */
+  padding: 0;
+}
+
 @keyframes pulse {
   0% { transform: scale(1); }
   50% { transform: scale(1.2); }
@@ -130,7 +142,7 @@ Your browser does not support the audio element.
   <div class="container">
         <h1 style="color:white;">Lily, Welcome to Our Little Space ;)</h1>
     <div style="font-size: 2.5rem; animation: pulse 2s infinite;">❤️</div>
-    <a href="cardPage.html" target="_blank" class="btn">💌 Messages</a>
+    <a href="bucketlist.html" target="_blank" class="btn">💌 Messages</a>
     <a href="time.html" target="_blank" class="btn">⏱️ Timeline</a>
     <a href="moments.html" target="_blank" class="btn">📸 Moments</a>
   </div>
@@ -138,7 +150,7 @@ Your browser does not support the audio element.
 
 <script>
   const correctUsername = "lily";
-  const correctPassword = "shlonktimeisprecious";
+  const correctPassword = "l";
 
   function checkLogin() {
     const user = document.getElementById("username").value;
