--- a/bucketlist.html
+++ b/bucketlist.html
@@ -17,6 +17,17 @@
       align-items: center;
       padding: 40px;
     }
+    @keyframes gradientShift {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 
     h1 {
       font-family: 'Playfair Display', serif;
