--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Your browser does not support the audio element.
   <div class="container">
         <h1 style="color:white;">Lily, Welcome to Our Little Space ;)</h1>
     <div style="font-size: 2.5rem; animation: pulse 2s infinite;">❤️</div>
-    <a href="bucketlist.html" target="_blank" class="btn">💌 Messages</a>
+    <a href="bucketlist.html" target="_blank" class="btn">🪣 Bucket List</a>
     <a href="time.html" target="_blank" class="btn">⏱️ Timeline</a>
     <a href="moments.html" target="_blank" class="btn">📸 Moments</a>
   </div>
