update password for login functionality in index.html and moments.html

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Your browser does not support the audio element.
 
 <script>
   const correctUsername = "lily";
-  const correctPassword = "l";
+  const correctPassword = "iloveyou";
 
   function checkLogin() {
     const user = document.getElementById("username").value;
