--- a/moments.html
+++ b/moments.html
@@ -172,7 +172,7 @@
 
 <script>
   const correctUsername = "lily";
-  const correctPassword = "l";
+  const correctPassword = "iloveyou";
 
   function checkLogin() {
     const user = document.getElementById("username").value;
