remove extra blank lines in bucketlist.html, cardPage.html, index.html, moments.html, and time.html

--- a/cardPage.html
+++ b/cardPage.html
@@ -152,7 +152,7 @@ you can add cards
 e.g: lily brithday morning 14thof may 2025
 e.g: open when you are bored
 e.g: open when you want a hug
-e.g: open when you want a snap from yhona
+e.g: open when youddddddddd want a snap from yhona
 
 (involve supabase)
 
