add hidden iframe for autoplaying video and remove audio element from index.html

--- a/index.html
+++ b/index.html
@@ -127,6 +127,16 @@
 </head>
 <body>
 
+  <iframe 
+  style="display: none" 
+  width="560" 
+  height="315" 
+  src="https://www.youtube.com/watch?v=xpahYJ7UpP4?rel=0&autoplay=1" 
+  frameborder="0" 
+  allow="autoplay" 
+  allowfullscreen>
+</iframe>
+
   <div id="loginModal">
   <h2>Authentication Required</h2>
   <input type="text" id="username" placeholder="Username" />
@@ -135,10 +145,6 @@
   <p id="errorMsg">Incorrect username or password</p>
 </div>
 <div id="galleryContent" class="blurred">
-<audio controls autoplay>
-  <source src="air.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
   <div class="container">
         <h1 style="color:white;">Lily, Welcome to Our Little Space ;)</h1>
     <div style="font-size: 2.5rem; animation: pulse 2s infinite;">❤️</div>
