--- a/index.html
+++ b/index.html
@@ -176,6 +176,18 @@ Your browser does not support the audio element.
   }
 </script>
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HHEGVL8JMR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HHEGVL8JMR');
+</script>
+
+
 </body>
 </html>
 
