--- a/bucketlist.html
+++ b/bucketlist.html
@@ -92,6 +92,15 @@
     }
   </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HHEGVL8JMR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HHEGVL8JMR');
+</script>
 <body>
 
   <h1>Our Bucket List 💗</h1>
