--- a/moments.html
+++ b/moments.html
@@ -115,6 +115,15 @@
     }
   </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HHEGVL8JMR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HHEGVL8JMR');
+</script>
 <body>
 
 <div id="loginModal">
