--- a/time.html
+++ b/time.html
@@ -70,6 +70,15 @@
     }
   </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HHEGVL8JMR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HHEGVL8JMR');
+</script>
 <body>
   <div class="container">
     <h1>We've been together for 💖</h1>
